--- a/madLibs/index.html
+++ b/madLibs/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="css/style.css">
+	<script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>
+	<script src="js/angular.min.js" type="text/javascript"></script>
 </head>
 <body>
-	
+	<header>
+		<div class="logo-box">
+			
+		</div>
+		<div class="header-title-box"></div>
+	</header>
 </body>
 </html>
