--- a/madLibs/madlibs_withController.html
+++ b/madLibs/madlibs_withController.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="">
+<html lang="en" ng-app="madLibs">
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +7,9 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>
 	<script src="js/angular.min.js" type="text/javascript"></script>
+	<script src="js/madlibs.js" type="text/javascript"></script>
 </head>
-<body ng-init="female_name='female_name';job_title='job_title';tedious_task='tedious_task';dirty_task='dirty_task';female_name2='female_name2';celebrity='celebrity';useless_skill='useless_skill';adjective='adjective';obnoxiuous_celbertity='obnoxiuous_celbertity';dirty_task='dirty_task'">
+<body ng-controller="MyCtrl">
 
 	<header>
 		<div class="logo-box">
