--- a/madLibs/madlibs_withController_withForm.html
+++ b/madLibs/madlibs_withController_withForm.html
@@ -11,7 +11,7 @@
 	<script src="js/madlibs_form.js" type="text/javascript"></script>
 
 </head>
-<body ng-controller="MyCtrl" ng-init="showDetails = true">
+<body ng-controller="MyCtrl">
 
 	<header>
 		<div class="logo-box">
