--- a/madLibs/madlibs_withController_withForm_withAnimation.html
+++ b/madLibs/madlibs_withController_withForm_withAnimation.html
@@ -8,6 +8,7 @@
 	<script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>
 	<script src="js/angular.min.js" type="text/javascript"></script>
 	<script src="js/angular-messages.min.js" type="text/javascript"></script>
+	<script src="js/angular-animate.min.js" type="text/javascript"></script>
 	<script src="js/madlibs_form.js" type="text/javascript"></script>
 
 </head>
@@ -23,7 +24,7 @@
 		</div>
 	</header>
 
-	<section class="wordlist-section" ng-hide="myForm.$submitted && myForm.$valid" ng-show="showDetails">
+	<section class="wordlist-section" ng-hide="myForm.$submitted && myForm.$valid" ng-show="showDetails" ng-app="ngAnimate">
 		<form name="myForm">
 
 			<h2>Provide the following words</h2>
