--- a/Waitstaff_Calculator/index.html
+++ b/Waitstaff_Calculator/index.html
@@ -12,7 +12,7 @@
 	<script src="js/angular-messages.min.js" type="text/javascript"></script>
 	<script src="js/waitstaff_calculator_form.js" type="text/javascript"></script>
 </head>
-<body ng-controller="MyCtrl">
+<body>
 	<div class="container">
 		<header>
 			<h1>WaitStaff Calculator</h1>
