--- a/Routing_waitStaff/index.html
+++ b/Routing_waitStaff/index.html
@@ -25,13 +25,16 @@
 		<br>
 		<br>
 
-		<div ng-view></div>
+		<div class="animate-view-container">
+		    <div ng-view class="animate-view" ng-class="{loading: isLoading}"></div>
+		</div>
 	</div>
 
     
     
     <script type="text/javascript" src="bower_components/angular/angular.js"></script>
     <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
+    <script type="text/javascript" src="bower_components/angular-animate/angular-animate.js"></script>
     <script type="text/javascript" src="js/angular-messages.min.js"></script>
     <script type="text/javascript" src="js/waitstaff_calculator_form.js"></script>
 </body>
